--- a/index.css
+++ b/index.css
@@ -34,7 +34,7 @@ header h1{
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     grid-gap: 30px;
     grid-row-gap: 30px;
-    width: 60%;
+    width: 100%;
     transition: 3s;
 
 }
@@ -87,7 +87,8 @@ header h1{
     position: sticky !important;
     top: 0;
     transition: .3s;
-
+    opacity: 0;
+    margin-right: -100%;
 }
 .carrito .header-carrito{
     background-color: black;
