--- a/index.css
+++ b/index.css
@@ -1,4 +1,11 @@
+/* INTEGRANTES:
+Karen Dayana Fuentes Mendoza
+Cesar Luis Alean Hernandez
+*/
+
+
 /* importo las fuentes */
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
 *{
     margin: 0;
